# ble_knowledge

./: .gitignore  uuid_definitions.md
snippets/: CMakeLists.txt  agent.c  agent.h  beacon-daemon.c  main.c  panoramalabs-agent.c  panoramalabs-agent.h  panoramalabs-daemon.c  panoramalabs-objectmanager.c  panoramalabs-objectmanager.h  panoramalabs-objectmanager.xml  panoramalabs-service-generated-docs-org.bluez.Agent1.xml  panoramalabs-service.c  panoramalabs-service.h  panoramalabs-service.xml  whitelist.conf
snippets/debug/: debug.c  debug.h
snippets/utils/: list_utils.c  list_utils.h
